tests/fixtures/authz/fail/allow-true-default.rego
package authz.orders

# REQ-05 FAIL: default allow := true — abre acesso por padrão (fail-open).
default allow := true
